tests/t_c_type_check_atom_compile.d/control.err
t_c_type_check_atom_compile.e:9
<0346>:: Type check error:  assigning a sequence to an atom
atom aAtom = aSequence
           ^
